# AMU_Codebase

./: .clang-format  .gitignore  CMakeLists.txt
include/: benchmark.h  chord.h  defines.h  file.h  grid.h  iTriangle.h  iWave.h  lexer.h  note.h  scale.h  screen.h  triangle.h  util_time.h  vector2.h  wave.h
src/: benchmark.cc  file.cc  main.cc  main.cpp  note.cc  screen.cc  screen.cpp  triangle.cpp  vector2.cc  wave.cc
tests/: CMakeLists.txt  runtests.cc  test_benchmark.cc  test_note.cc  test_triangle.cpp  test_util_time.cc  test_vector2.cpp  test_wave.cpp
